--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
-- include: bootstrap.yml
-- include: djatoka.yml
-- include: fcrepo.yml
-- include: solr.yml
-- include: gsearch.yml
+- include: java8.yml
+# - include: tomcat7.yml
+#- include: djatoka.yml
+#- include: fcrepo.yml
+#- include: solr.yml
+#- include: gsearch.yml
