--- a/roles/java/tasks/tomcat7.yml
+++ b/roles/java/tasks/tomcat7.yml
@@ -1,11 +1,11 @@
 ---
 ## adapted from https://github.com/Islandora-Labs/islandora_vagrant/blob/master/scripts/bootstrap.sh
 
-- apt: name=software-properties-common
+#- apt: name=software-properties-common
 
-- apt: name=python-software-properties
+#- apt: name=python-software-properties
 
-- include: java8.yml
+#- include: java8.yml
 
 - apt: name=maven
 
@@ -32,7 +32,11 @@
   replace: replace='JDK_DIRS="/usr/lib/jvm/default-java ${OPENJDKS} /usr/lib/jvm/java-6-openjdk /usr/lib/jvm/java-6-sun /usr/lib/jvm/java-7-oracle /usr/lib/jvm/java-8-oracle"' dest="/etc/init.d/tomcat7" regexp="JDK_DIRS=.*"
   # http://stackoverflow.com/questions/27457398/why-java-home-not-recognized-by-tomcat7-in-ubuntu
   # TODO   
-  
+
+- lineinfile:
+    dest: /etc/environment
+    line: "CATALINA_OPTS=-Xmx2048m"
+
 - name: start tomcat for the first time
   service:
     name: tomcat7
