--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "roles/ansible-tomcat7"]
 	path = roles/ansible-tomcat7
 	url = https://github.com/gregwhitaker/ansible-tomcat7.git
+[submodule "roles/java8"]
+	path = roles/java8
+	url = https://github.com/gregwhitaker/ansible-java8.git
