add force so that file gets copied always

--- a/roles/java_components/tasks/tomcat7-admin.yml
+++ b/roles/java_components/tasks/tomcat7-admin.yml
@@ -15,6 +15,7 @@
     dest: /usr/local/tomcat/conf/tomcat-users.xml
     owner: tomcat7
     group: tomcat7
+    force: yes
 
 - name: Restart tomcat7
   service:
