--- a/roles/java_components/tasks/main.yml
+++ b/roles/java_components/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include: tomcat7-admin.yml
 - include: djatoka.yml
-#- include: fcrepo.yml
+- include: fcrepo.yml
 #- include: solr.yml
 #- include: gsearch.yml
