--- a/roles/java_components/tasks/main.yml
+++ b/roles/java_components/tasks/main.yml
@@ -2,5 +2,5 @@
 - include: tomcat7-admin.yml
 - include: djatoka.yml
 - include: fcrepo.yml
-#- include: solr.yml
+- include: solr.yml
 #- include: gsearch.yml
