--- a/roles/java_components/tasks/gsearch.yml
+++ b/roles/java_components/tasks/gsearch.yml
@@ -28,6 +28,10 @@
   stat: path="{{work_dir}}/dgi_gsearch_extensions/target/gsearch_extensions-0.1.1-jar-with-dependencies.jar"
   register: gse_jar_present
 
+- name: Ensure mvn installed
+  apt:
+    name: maven2
+
   # TODO keep an eye out for a mvn module
 - name: Package dgi_gsearch_extensions with maven (shell)
   shell: mvn -q package
@@ -69,25 +73,13 @@
 - name: Set some flags for the jvm
   shell: sed -i 's#JAVA_OPTS="-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC"#JAVA_OPTS="-Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -Dkakadu.home=/usr/local/djatoka/bin/Linux-x86-64 -Djava.library.path=/usr/local/djatoka/lib/Linux-x86-64 -DLD_LIBRARY_PATH=/usr/local/djatoka/lib/Linux-x86-64"#g' /etc/default/tomcat7
 
-- name: restart tomcat, sleep for 3 minutes...........
-  service:
-    name: tomcat7
-    sleep: 60
-    state: restarted
-
-- name: Ensure gsearch target dir exists
-  file:
+- name: wait for gsearch deployment
+  wait_for:
     path: /var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/classes
-    state: directory
-    owner: tomcat7
-    group: tomcat7
+    state: present
 
 - name: GSearch configurations
   unarchive: copy=no src=http://alpha.library.yorku.ca/fgsconfigFinal.zip dest=/var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/classes
-
-#- name: "Check if we've already deployed the dgi gsearch extension jar"
-#  stat: path=/var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/lib/gsearch_extensions-0.1.1-jar-with-dependencies.jar
-#  register: gse_war_jar_present
 
 - name: Ensure Tomcat owns everything in working dir
   file: 
@@ -98,10 +90,10 @@
     group: tomcat7
 
 - name: Deploy dgi_gsearch_extensions
-  command: "cp {{work_dir}}/dgi_gsearch_extensions/target/gsearch_extensions-0.1.1-jar-with-dependencies.jar /var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/lib/"
-  args:
-    creates: /var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/lib/gsearch_extensions-0.1.1-jar-with-dependencies.jar
-#  when: gse_war_jar_present.stat.exists == False
+  copy:
+    src: "{{work_dir}}/dgi_gsearch_extensions/target/gsearch_extensions-0.1.1-jar-with-dependencies.jar"
+    dest: /var/lib/tomcat7/webapps/fedoragsearch/WEB-INF/lib/gsearch_extensions-0.1.1-jar-with-dependencies.jar
+    remote_src: yes
 
 ## Solr & GSearch configurations
    ## todo: since this is adding files to an existing directory, we need to get a little fancier
@@ -116,9 +108,3 @@
 
 - name: Restart Tomcat
   service: name=tomcat7 state=restarted
-
-
-
-
-
-  
