--- a/vsite.yml
+++ b/vsite.yml
@@ -1,4 +1,8 @@
 ---
+- hosts: all
+  become: True
+  become_method: sudo
+  become_user: root
 - include: vagrant.yml
 - include: java.yml
 - include: www.yml
