mvm site.yml, update vagrantfile z

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,8 @@
 ---
-- include: local.yml
-- include: db.yml
+- hosts: all
+  become: True
+  become_method: sudo
+  become_user: root
+- include: vagrant.yml
 - include: java.yml
 - include: www.yml
