--- a/roles/java_components/tasks/fcrepo.yml
+++ b/roles/java_components/tasks/fcrepo.yml
@@ -86,7 +86,7 @@
 #  template: src=../templates/deny-apim-if-not-localhost.xml dest="{{fedora_home}}/data/fedora-xacml-policies/repository-policies/default/"
 
 - name: get Drupal auth filter from github
-  get_url: url="https://github.com/islandora/islandora_drupal_filter/releases/download/v7.1.3/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" dest="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
+  get_url: url="https://github.com/islandora/islandora_drupal_filter/releases/download/v7/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" dest="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
 
 - name: set drupal auth permissions
   file: path="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
