--- a/roles/islandora/vars/main.yml
+++ b/roles/islandora/vars/main.yml
@@ -1,5 +1,4 @@
 ---
 modules_dir: "{{ drupal_core_path }}/sites/all/modules"
 libraries_dir: "{{ drupal_core_path }}/sites/all/libraries"
-fits_home: "/usr/local/fits"
-fits_version: 0.8.5
+drupal_core_path: /var/www/drupal
