Change site name
LSU Islandora

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,4 +9,4 @@ drupal_core_path: "/var/www/drupal"
 drupal_domain: "drupaltest.dev"
 
 # Your Drupal site name.
-drupal_site_name: "Drupal Example"
+drupal_site_name: "LSU Islandora"
