adding conditional to php-devtools include

--- a/roles/islandora_dependencies/tasks/main.yml
+++ b/roles/islandora_dependencies/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - include: system-dependencies.yml
 - include: php-devtools.yml
-  when: "{{ devtools }}"
+  when: "{{ install_php_devtools }}"
