uses base-6-umbrella (the 6 is arbitrary) to build a base image containing an lsu-flavored islandora
Depends on the playbooks < 20* having been run already...

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "roles/ansible-role-islandora-system-dependencies"]
 	path = roles/ansible-role-islandora-system-dependencies
 	url = https://github.com/lsulibraries/ansible-role-islandora-system-dependencies
+[submodule "roles/ansible-role-islandora-collections"]
+	path = roles/ansible-role-islandora-collections
+	url = https://github.com/lsulibraries/ansible-role-islandora-collections
