--- a/roles/java_components/tasks/djatoka.yml
+++ b/roles/java_components/tasks/djatoka.yml
@@ -43,8 +43,20 @@
   lineinfile:
     regexp: 'JAVA_OPTS="\-Djava\.awt\.headless=true \-XX:MaxPermSize=256M \-Xmx1024m \-XX:\+UseConcMarkSweepGC "'
 #    regexp: '#JAVA_OPTS="-Djava.awt.headless=true -XX:MaxPermSize=256M -Xmx1024m -XX:+UseConcMarkSweepGC "'
-    line: 'JAVA_OPTS="-Djava.awt.headless=true -Xmx1024m -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -Dkakadu.home=/usr/local/djatoka/bin/Linux-x86-64 -Djava.library.path=/usr/local/djatoka/lib/Linux-x86-64 -DLD_LIBRARY_PATH=/usr/local/djatoka/lib/Linux-x86-64"'
+    line: 'JAVA_OPTS="-Djava.awt.headless=true -Xmx4g -Xms4g -XX:MaxPermSize=500m -XX:+UseConcMarkSweepGC -Dkakadu.home=/usr/local/djatoka/bin/Linux-x86-64 -Djava.library.path=/usr/local/djatoka/lib/Linux-x86-64 -DLD_LIBRARY_PATH=/usr/local/djatoka/lib/Linux-x86-64 -Xloggc:/var/log/islandora/java/java_gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:ErrorFile=/var/log/islandora/java/java_error%p.log -XX:+DisableExplicitGC"'
     dest: /etc/default/tomcat7
+
+- name: create islandora dir
+  file:
+    path: /var/log/islandora
+    state: directory
+    owner: tomcat7
+
+- name: create islandora dir
+  file:
+    path: /var/log/islandora/java
+    state: directory
+    owner: tomcat7
 
 - name: Sleep for 15 while Tomcat restart
   service: name=tomcat7 state=restarted sleep=15
