--- a/roles/java_components/tasks/fcrepo.yml
+++ b/roles/java_components/tasks/fcrepo.yml
@@ -6,13 +6,6 @@
 - name: Setup $FEDORA_HOME
   file: state=directory path="{{fedora_home}}" owner=tomcat7 group=tomcat7 mode=0755
 
-- name: Copy Fedora from local cache
-  copy: src="/opt/fcrepo-installer-{{fedora_version}}.jar" dest="{{work_dir}}" remote_src=yes
-
-#- name: Download Fedora from local cache
-#  copy: src="../files/fcrepo-installer-{{fedora_version}}.jar" dest="{{work_dir#}}"
-#  when: fcrepo_jar.stat.exists == False
-
 - name: Setup $FEDORA_HOME env var
   lineinfile: dest=/etc/environment line="FEDORA_HOME={{fedora_home}}" insertafter=EOF
 
@@ -26,7 +19,7 @@
     creates: /var/lib/tomcat7/webapps/fedora.war
 
 - name: Update fcrepo war ownership 
-  file: path=/var/lib/tomcat7/webapps/fedora.war owner=tomcat7 group=tomcat7
+  file: path=/var/lib/tomcat7 owner=tomcat7 group=tomcat7 recurse=true
 
 - name: Ensure $FEDORA_HOME ownership
   file: path="{{fedora_home}}" owner=tomcat7 group=tomcat7 follow=yes recurse=yes
@@ -86,19 +79,34 @@
 #  template: src=../templates/deny-apim-if-not-localhost.xml dest="{{fedora_home}}/data/fedora-xacml-policies/repository-policies/default/"
 
 - name: get Drupal auth filter from github
-  get_url: url="https://github.com/islandora/islandora_drupal_filter/releases/download/v7.1.3/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" dest="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
+  get_url: 
+    url: "https://github.com/islandora/islandora_drupal_filter/releases/download/v7.1.3/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar"
+    dest: "/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar"
+    owner: tomcat7
+    group: tomcat7
 
 - name: set drupal auth permissions
-  file: path="/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar" owner=tomcat7 group=tomcat7
+  file: 
+    path: "/var/lib/tomcat7/webapps/fedora/WEB-INF/lib/fcrepo-drupalauthfilter-{{auth_filter_fedora_version}}.jar"
+    owner: tomcat7
+    group: tomcat7
 
 - name: copy jaas.conf
-  template: src=../templates/jaas.conf dest="{{fedora_home}}/server/config/"
+  template:
+    src: ../templates/jaas.conf
+    dest: "{{fedora_home}}/server/config/"
 
 - name: copy filter-drupal
-  template: src=../templates/filter-drupal.xml dest="{{fedora_home}}/server/config/"
+  template:
+    src: ../templates/filter-drupal.xml
+    dest: "{{fedora_home}}/server/config/"
 
 - name: copy logging properties for fedora
-  copy: src=../files/logging.properties dest=/var/lib/tomcat7/webapps/fedora/WEB-INF/classes
+  copy: 
+    src: ../files/logging.properties
+    dest: /var/lib/tomcat7/webapps/fedora/WEB-INF/classes
 
 - name: Tomcat restart
-  service: name=tomcat7 state=restarted 
+  service:
+    name: tomcat7
+    state: restarted 
