--- a/roles/java_components/templates/install.properties
+++ b/roles/java_components/templates/install.properties
@@ -24,7 +24,7 @@ fedora.serverContext=fedora
 llstore.type=akubra-fs
 tomcat.home=/var/lib/tomcat7
 fesl.authn.enabled=true
-database.mysql.jdbcURL=jdbc\:mysql\://{{database_host}}/fedora3?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
+database.mysql.jdbcURL=jdbc\:mysql\://{{fedora_database_host}}/{{fedora_database_name}}?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
 fedora.home={{fedora_home}}
 install.type=custom
 servlet.engine=included
