--- a/roles/java_components/templates/install.properties
+++ b/roles/java_components/templates/install.properties
@@ -7,7 +7,7 @@ apia.auth.required=false
 database.jdbcDriverClass=com.mysql.jdbc.Driver
 upstream.auth.enabled=false
 ssl.available=false
-database.jdbcURL=jdbc\:mysql\://localhost/fedora3?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
+database.jdbcURL=jdbc\:mysql\://{{fedora_database_host}}/{{fedora_database_name}}?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
 messaging.uri=vm\:(broker\:(tcp\://localhost\:61616))
 database.password=fedoraAdmin
 database.mysql.driver=included
