--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -88,6 +88,21 @@ php_post_max_size: 4096M
 php_display_errors: On
 php_date_timezone: America/Chicago
 php_memory_limit: 2048M
+php_packages:
+  - php5
+  - php5-mcrypt
+  - php5-cli
+  - php5-common
+  - php5-curl
+  - php5-dev
+  - php5-fpm
+  - php5-gd
+  - php-pear
+  - php5-apcu
+  - libpcre3-dev
+  - php-soap
+  - php5-xsl
+  - php5-json
 
 #################
 # drupal
