--- a/build.yml
+++ b/build.yml
@@ -1,13 +1,12 @@
 ---
-- include: mounts.yml
-  when: attach_mounts
+#- include: mounts.yml
+#  when: attach_mounts
 
-- include: build-prep.yml
-- include: mysql.yml
-  when: mysql_local_installation == 'true'
+#- include: build-prep.yml
+#- include: mysql.yml
 
-- include: databases.yml
-- include: java.yml
+#- include: databases.yml
+#- include: java.yml
 
-- include: drupal.yml
+#- include: drupal.yml
 - include: islandora.yml
