--- a/mounts.yml
+++ b/mounts.yml
@@ -8,6 +8,11 @@
         path: "{{ cache_dir }}"
         state: directory
 
+    - name: make fs
+      filesystem:
+        dev: /dev/xvdh
+        fstype: ext4
+
     - name: Mount cache volume  
       mount:
         src: /dev/xvdh
