uncomments all migrations

--- a/migrate.yml
+++ b/migrate.yml
@@ -1,6 +1,6 @@
 ---
-#- include: migrations/migration-2016080313.yml
-#- include: migrations/migration-2016080411.yml
-#- include: migrations/migration-2016080908.yml
+- include: migrations/migration-2016080313.yml
+- include: migrations/migration-2016080411.yml
+- include: migrations/migration-2016080908.yml
 - include: migrations/migration-2016081011.yml
 
