--- a/migrate.yml
+++ b/migrate.yml
@@ -1,5 +1,5 @@
 ---
-- include: migrations/migration-2016080313.yml
-- include: migrations/migration-2016080411.yml
-- include: migrations/migration-2016080908.yml
+#- include: migrations/migration-2016080313.yml
+#- include: migrations/migration-2016080411.yml
+#- include: migrations/migration-2016080908.yml
 - include: migrations/migration-2016081011.yml
