--- a/migrate.yml
+++ b/migrate.yml
@@ -1,5 +1,7 @@
 ---
-#- include: migrations/migration-2016080313.yml
-#- include: migrations/migration-2016080411.yml
-#- include: migrations/migration-2016080908.yml
+- include: migrations/migration-2016080313.yml
+- include: migrations/migration-2016080411.yml
+- include: migrations/migration-2016080908.yml
 - include: migrations/migration-2016081011.yml
+- include: migrations/migration-2016092210.yml
+- include: migrations/migration-2016092214.yml
