--- a/migrate.yml
+++ b/migrate.yml
@@ -8,3 +8,4 @@
 - include: migrations/migration-2016092216.yml
 - include: migrations/migration-2016092314.yml
 - include: migrations/migration-2016092614.yml
+- include: migrations/migration-2016092810.yml
