--- a/migrate.yml
+++ b/migrate.yml
@@ -9,3 +9,4 @@
 - include: migrations/migration-2016092314.yml
 - include: migrations/migration-2016092614.yml
 - include: migrations/migration-2016092810.yml
+- include: migrations/migration-2016092910.yml
