--- a/migrate.yml
+++ b/migrate.yml
@@ -10,5 +10,6 @@
 #- include: migrations/migration-2016092614.yml
 #- include: migrations/migration-2016092810.yml
 #- include: migrations/migration-2016092910.yml
-- include: migrations/migration-2016101111.yml
-- include: migrations/migration-2016101210.yml
+#- include: migrations/migration-2016101111.yml
+#- include: migrations/migration-2016101210.yml
+- include: migrations/migration-2016101311.yml
