Captures latest migration.

--- a/migrate.yml
+++ b/migrate.yml
@@ -13,3 +13,4 @@
 #- include: migrations/migration-2016101111.yml
 #- include: migrations/migration-2016101210.yml
 - include: migrations/migration-2016101311.yml
+- include: migrations/migration-2016101414.yml
