enables latest migration

--- a/migrate.yml
+++ b/migrate.yml
@@ -12,5 +12,6 @@
 #- include: migrations/migration-2016092910.yml
 #- include: migrations/migration-2016101111.yml
 #- include: migrations/migration-2016101210.yml
-- include: migrations/migration-2016101311.yml
-- include: migrations/migration-2016101414.yml
+#- include: migrations/migration-2016101311.yml
+#- include: migrations/migration-2016101414.yml
+- include: migrations/migration-2016101812.yml
