--- a/migrate.yml
+++ b/migrate.yml
@@ -14,4 +14,5 @@
 #- include: migrations/migration-2016101210.yml
 #- include: migrations/migration-2016101311.yml
 #- include: migrations/migration-2016101414.yml
-- include: migrations/migration-2016101812.yml
+#- include: migrations/migration-2016101812.yml
+- include: migrations/migration-2016103114.yml
