adding new migration follow to add new modules

--- a/migrate.yml
+++ b/migrate.yml
@@ -16,3 +16,4 @@
 - include: migrations/migration-2016101414.yml
 - include: migrations/migration-2016101812.yml
 - include: migrations/migration-2016103114.yml
+- include: migrations/migration-2016103103.yml
