--- a/migrate.yml
+++ b/migrate.yml
@@ -1,18 +1,19 @@
 ---
-- include: migrations/migration-2016080313.yml
-- include: migrations/migration-2016080411.yml
-- include: migrations/migration-2016080908.yml
-- include: migrations/migration-2016081011.yml
-- include: migrations/migration-2016092210.yml
-- include: migrations/migration-2016092214.yml
-- include: migrations/migration-2016092216.yml
-- include: migrations/migration-2016092314.yml
-- include: migrations/migration-2016092614.yml
-- include: migrations/migration-2016092810.yml
-- include: migrations/migration-2016092910.yml
-- include: migrations/migration-2016101111.yml
-- include: migrations/migration-2016101210.yml
-- include: migrations/migration-2016101311.yml
-- include: migrations/migration-2016101414.yml
-- include: migrations/migration-2016101812.yml
-- include: migrations/migration-2016103114.yml
+#- include: migrations/migration-2016080313.yml
+#- include: migrations/migration-2016080411.yml
+#- include: migrations/migration-2016080908.yml
+#- include: migrations/migration-2016081011.yml
+#- include: migrations/migration-2016092210.yml
+#- include: migrations/migration-2016092214.yml
+#- include: migrations/migration-2016092216.yml
+#- include: migrations/migration-2016092314.yml
+#- include: migrations/migration-2016092614.yml
+#- include: migrations/migration-2016092810.yml
+#- include: migrations/migration-2016092910.yml
+#- include: migrations/migration-2016101111.yml
+#- include: migrations/migration-2016101210.yml
+#- include: migrations/migration-2016101311.yml
+#- include: migrations/migration-2016101414.yml
+#- include: migrations/migration-2016101812.yml
+#- include: migrations/migration-2016103114.yml
+- include: migrations/migration-2016110114.yml
