updates submod: adds latest theme; applies gsearch config fix

--- a/migrate.yml
+++ b/migrate.yml
@@ -17,3 +17,4 @@
 #- include: migrations/migration-2016101812.yml
 #- include: migrations/migration-2016103114.yml
 - include: migrations/migration-2016110114.yml
+- include: migrations/migration-2016110210.yml
