updates submod; theme

--- a/migrate.yml
+++ b/migrate.yml
@@ -17,5 +17,6 @@
 #- include: migrations/migration-2016101812.yml
 #- include: migrations/migration-2016103114.yml
 #- include: migrations/migration-2016103103.yml # Dave, should we run this ?
-- include: migrations/migration-2016110114.yml
-- include: migrations/migration-2016110210.yml
+#- include: migrations/migration-2016110114.yml
+#- include: migrations/migration-2016110210.yml
+- include: migrations/migration-2016110308.yml
