--- a/migrate.yml
+++ b/migrate.yml
@@ -20,5 +20,6 @@
 #- include: migrations/migration-2016110114.yml
 #- include: migrations/migration-2016110210.yml
 #- include: migrations/migration-2016110308.yml
-- include: migrations/migration-2016111510.yml
-- include: migrations/migration-2016111610.yml
+#- include: migrations/migration-2016111510.yml
+#- include: migrations/migration-2016111610.yml
+- include: migrations/migration-2016111711.yml
