--- a/LDL-0.5.5.1.yml
+++ b/LDL-0.5.5.1.yml
@@ -1,5 +1,5 @@
 
 ---
-#- include: migrations/migration-2016112915.yml
+- include: migrations/migration-2016112915.yml
 - include: migrations/migration-2016112916.yml
 
