--- a/LDL-0.5.5.0.yml
+++ b/LDL-0.5.5.0.yml
@@ -4,3 +4,4 @@
 - include: migrations/migration-2016111711.yml
 - include: migrations/migration-2016112310.yml
 - include: migrations/migration-2016112311.yml
+- include: migrations/migration-2016113013.yml
