comments out all but DC2MODS migration steps

--- a/LDL-0.5.5.1.yml
+++ b/LDL-0.5.5.1.yml
@@ -1,5 +1,6 @@
 
 ---
-- include: migrations/migration-2016112915.yml
-- include: migrations/migration-2016112916.yml
+#- include: migrations/migration-2016112915.yml
+#- include: migrations/migration-2016112916.yml
+- include: migrations/migration-2016120113.yml
 
