--- a/LDL-0.5.5.1.yml
+++ b/LDL-0.5.5.1.yml
@@ -3,4 +3,6 @@
 - include: migrations/migration-2016112915.yml
 - include: migrations/migration-2016112916.yml
 - include: migrations/migration-2016120113.yml
+- include: migrations/migration-2016120115.yml
+- include: migrations/migration-2016120208.yml
 
