--- a/LDL-0.5.5.1.yml
+++ b/LDL-0.5.5.1.yml
@@ -5,4 +5,5 @@
 - include: migrations/migration-2016120113.yml
 - include: migrations/migration-2016120115.yml
 - include: migrations/migration-2016120208.yml
+- include: migrations/migration-2016120212.yml
 
