--- a/LDL-0.5.5.1.yml
+++ b/LDL-0.5.5.1.yml
@@ -6,4 +6,6 @@
 - include: migrations/migration-2016120115.yml
 - include: migrations/migration-2016120208.yml
 - include: migrations/migration-2016120212.yml
+- include: migrations/migration-2016120214.yml
+
 
