--- a/LDL-0.5.5.3.yml
+++ b/LDL-0.5.5.3.yml
@@ -1,2 +1,6 @@
 ---
 - include: migrations/migration-2016120813.yml
+- include: migrations/migration-2016120914.yml
+- include: migrations/migration-2016120915.yml
+- include: migrations/migration-2016121409.yml
+- include: migrations/migration-2016121510.yml
