--- a/local.yml
+++ b/local.yml
@@ -2,4 +2,4 @@
 - include: vagrant-hack.yml
 - include: v1.2.2.5.yml
 - include: LDL-0.5.x.yml
-- include: vagrant-post-build.yml
+- include: post-build-cleanup.yml
